# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xpzNkb_oV84nbRbvWSjrc6NyANimLX54UGj0wRGRzmVY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1WNaitJcaQD2PRzaiMDkv195ixoVGkiKDCJLaDiQHE_8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1JQjvC0fbLm6F6Mgp4SoIQgYCDN2tbHSNL0Pr3HXE4v4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xef0DhttygktKQZ0m3ArTi-0RhYB4GAz07CPcHsWDpGQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x13E8w4Zq1QWUAdA0LwcaE47ipZVzMDWwTof4kOKzLhgg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1XJfqGh-wJR-q7v9lwR4jxxzM9cxTHYu7h6q9HZiOl2M=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1l-PyB3aL5ZsifO96WNIuOsWrpssfD5gjiLaQLfQqRe0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT23u84VPpfj-AsSqUBTWFN3L0TyqW3IiPbe8_TNXUMf6Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT24FEMElXbVBG9_eYhcrqECi-0cqWHHsl2WF7ChVKC53o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2NP9H-WWXUJig7TtC3EHR-9NGknO7gCZ1jJ8gI6mBiw4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Qwa63aHtL11z56v1_jgkw70CiU1a-fl3QAfwmvLYZPg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2oBsHEJ0lfZF0wkJzvjI663zwBb6vuRltuMuFmLjQOTQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1-xoCn4f0Vjpkxv5104ARVYnMUkqNfz5QxE5c9BIFRNg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1Cd036Qn5Ilgl_XQI7i8OhzwHLZUgYkIY47ehopQqZQY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1SszTkBuiBhCCBnJSef-8zqIELmZq_kP0FOSfdovh-e8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1ULVZalbtZyvDaKYdeXzsBVzHqiquKIQzMfDhXIgP-P8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1bvrtR3LuFs_FS2xs6A4uUG6JYZDCTktse3obC5M66ss=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1lEduwe_DkOuCSRjAs5dG3G-uliVzwti-l24IeYd-BaM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1viG2p_QIjBZSJ2k9Awx_dVYOBHeC1G9-bJAxeqUczjk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64VPy9TBqBgd4YEFGvtbXsDJIqyeDdV4vDPRs3FT1id7Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64Zqk73OYKV3-iKv4h8jzIaoGEw-q3ZFUv7SqfurnBuFA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x19TZGrT7wH7J6gC37lg5Xx9lrbYg90mixq0maw-1TvWc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1X_f0S16mx1tzRgU-hAc8GJ7sykfO_PRdPH57QfhwM-4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1map46XpbEHuhfZrq6oiIx32GArHSaISCPwWsXAcAnH8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_-BO31hoYdctJF6FAidAtP2zupUWGL6R6R_94ilKX4t8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_TkXpNr5TfIDveqon-WE6Ed1DCaPu1W3bWHDIyigLnw8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_agQitpQdykPnBcOgPXxCFW4MNDd1dtFF1otHGsnPRQM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32BX3cuTCNyFP9CwBKK7wCwIYZRoxa7xL4ZWaaUJgRrrU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32eE7bed13oOE7bjyI__6K-KVx0Z6FR-vIoPhHigUBjZg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32qw2ozfkl5JJ2hc3bFgZlcvuCFyqAzVbFk_19051vnxA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32Trr2YoM1zsV5VP7O-iHPoHF6R-V1x0uVQwoVsOgZB28=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xaz-wZbBYLpQrMQ2-4cEdkY0HkozMbn-RZU1e8Gg5xDE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xr-uKjcQX8sEONlw1NYVczUpCpuKOr9za44MQ__Dc0IM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT10ulHdM_LmlcNRGOEdK5K97wfA6xTivhVvtlNeczPnCw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT14L6uIvjxdOpI_UDAPUc3-2jXc6or9HhmV6Nuzpoq3-A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JtAVfD-bk2fB-aOic-BdivMQCBrdK9w0_AhwaVZK9y0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1LtHAvkOY2rWgC3uINPaqm5Wm3ksYsje505y1rEXib1Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1TOV-m5rylz7aragc0yk99Otkw88MGcytcLg9KQNr7nY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1jP7aDW7Nu9DMp9ymNoHXwLbpKp6r0CRyC3Z5Nmy5Jvg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1PTzLsmfg5ypa5Z26RIPk9YR-v02ijZah2G2ErGjUnX8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1xp8tCcDT4klvxREmn_F_1mczd59nlyL5dch8_3ssQ2E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3BkT29lUc272pzcRlOI_YcrsOGxLILES9g9hLfadN5pg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3xz8kodb2DY0hAIUlEUxw1WH81SXUCArwcFidt_EU9-w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT43NMKvmAUMANWOSOewx7B_cS465VcwiHdZ5t5tSuoqE4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4XW0z2J_hsbl77N1i07mgEKCwBWTkqf_d4hHUFWRNW-A=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x165_AQchQ7YRAuL7J5bIdBu4Jkt2QUWYVWlW9d10d-oZc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16t7z5HplK6orGcq51rTQ1RnODOflXsesCbbuQE2kDqVA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16WJ_CS2Pm3hcb0ad1tR-e7-etY63o9kkOn3YEUGt0wz4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16wsdIbHuHLkay4WfG8s8i-8ahhmlF4gjYHIiFwPUAjas=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16jauRSH-Dw1KSMfG-YhdyWYQxgYpNOCumZX1cMNh8nVs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16n8tlBf2_dQi3egmXqTbeWvQjz7WOHwUMtT_KCl3ydB0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16e4hea5jY6LD1L7jTsjgFeFp4b-OwgGL9gXfU_8LQZVo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16hMpY-qYMjBAy-enr9amIL3qanrLrUnefqEk-FTMh_Xw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16SScu6s9kW8kwQsHfhJpitSE6igtnNUCua_EKkAka7Bo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16cs6vATGrw3A6AkpG3-7jJnsAYt7UDP4KiBH_PCW41T0=',
      'err': 0,
    }),
  ])
# ---
